EDU-334 feat: 사용자의 현재 과목 위치 반환 추가